{
  "version": 4,
  "terraform_version": "1.9.6",
  "serial": 156,
  "lineage": "585da41a-3476-0cd9-3593-3c4cd0938afc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "AWSB56-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-027cc21409bb3f2e1",
            "arn": "arn:aws:ec2:us-east-1:337636137060:elastic-ip/eipalloc-027cc21409bb3f2e1",
            "domain": "vpc",
            "id": "eipalloc-027cc21409bb3f2e1",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-199-50-244.compute-1.amazonaws.com",
            "public_ip": "44.199.50.244",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "AWSB56-private-Linux1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fff1b9a61dec8a5f",
            "arn": "arn:aws:ec2:us-east-1:337636137060:instance/i-0367c8472f7f1ea67",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0367c8472f7f1ea67",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "AWSB56Key-kp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b98338f282365bd5",
            "private_dns": "ip-10-56-10-109.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.56.10.109",
            "public_dns": "ec2-34-224-88-56.compute-1.amazonaws.com",
            "public_ip": "34.224.88.56",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0dcb72e969d9f2922",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ff0c6f2160398a8a",
            "tags": {
              "Name": "AWSB56-EC2_private1"
            },
            "tags_all": {
              "Name": "AWSB56-EC2_private1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c97b8fe2ed1a7c8f"
            ]
          },
          "dependencies": [
            "aws_key_pair.AWSB56Key-kp",
            "aws_security_group.AWSB56_sg",
            "aws_subnet.private-subnet1",
            "aws_vpc.AWSB56-VPC1",
            "tls_private_key.AWSB56Key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "AWSB56-private-Linux2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fff1b9a61dec8a5f",
            "arn": "arn:aws:ec2:us-east-1:337636137060:instance/i-01818da20a0cef35d",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1e",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01818da20a0cef35d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "AWSB56Key-kp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d6dad80b42878961",
            "private_dns": "ip-10-56-20-170.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.56.20.170",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-009f74d23f51f6673",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0816f6092b40af5d6",
            "tags": {
              "Name": "AWSB56-Private2"
            },
            "tags_all": {
              "Name": "AWSB56-Private2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c97b8fe2ed1a7c8f"
            ]
          },
          "dependencies": [
            "aws_key_pair.AWSB56Key-kp",
            "aws_security_group.AWSB56_sg",
            "aws_subnet.private-subnet2",
            "aws_vpc.AWSB56-VPC1",
            "tls_private_key.AWSB56Key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "AWSB56-private-Linux3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fff1b9a61dec8a5f",
            "arn": "arn:aws:ec2:us-east-1:337636137060:instance/i-0dbd4f5c68aaf8a9c",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0dbd4f5c68aaf8a9c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "AWSB56Key-kp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0228a96d0d3420e67",
            "private_dns": "ip-10-56-30-187.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.56.30.187",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0426666eca7aff632",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-026cf2ae3f767a31c",
            "tags": {
              "Name": "AWSB56-EC2_private3"
            },
            "tags_all": {
              "Name": "AWSB56-EC2_private3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c97b8fe2ed1a7c8f"
            ]
          },
          "dependencies": [
            "aws_key_pair.AWSB56Key-kp",
            "aws_security_group.AWSB56_sg",
            "aws_subnet.private-subnet3",
            "aws_vpc.AWSB56-VPC1",
            "tls_private_key.AWSB56Key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "AWSB56-public-Linux",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fff1b9a61dec8a5f",
            "arn": "arn:aws:ec2:us-east-1:337636137060:instance/i-060c301dbe79adfa2",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-060c301dbe79adfa2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "AWSB56Key-kp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-029da6933e287a9ac",
            "private_dns": "ip-10-56-1-198.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.56.1.198",
            "public_dns": "ec2-184-73-59-48.compute-1.amazonaws.com",
            "public_ip": "184.73.59.48",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-00de647a7be550cc8",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e9103f3b28d51fd6",
            "tags": {
              "Name": "AWSB56-EC2_public"
            },
            "tags_all": {
              "Name": "AWSB56-EC2_public"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c97b8fe2ed1a7c8f"
            ]
          },
          "dependencies": [
            "aws_key_pair.AWSB56Key-kp",
            "aws_security_group.AWSB56_sg",
            "aws_subnet.public-subnet1",
            "aws_vpc.AWSB56-VPC1",
            "tls_private_key.AWSB56Key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "AWSB56-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:337636137060:internet-gateway/igw-0637fd220f3bf9a8c",
            "id": "igw-0637fd220f3bf9a8c",
            "owner_id": "337636137060",
            "tags": {
              "name": "AWSB56-internet gateway"
            },
            "tags_all": {
              "name": "AWSB56-internet gateway"
            },
            "vpc_id": "vpc-09bc102cc60d700ea"
          },
          "dependencies": [
            "aws_vpc.AWSB56-VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "AWSB56-ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-027cc21409bb3f2e1",
            "association_id": "eipassoc-0f907e5f2136357da",
            "connectivity_type": "public",
            "id": "nat-0d429a95419c467c3",
            "network_interface_id": "eni-0f0a394f3f8127336",
            "private_ip": "10.56.10.5",
            "public_ip": "44.199.50.244",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0ff0c6f2160398a8a",
            "tags": {
              "name": "AWSB56 NAT Gateway"
            },
            "tags_all": {
              "name": "AWSB56 NAT Gateway"
            }
          },
          "dependencies": [
            "aws_eip.AWSB56-eip",
            "aws_subnet.private-subnet1",
            "aws_vpc.AWSB56-VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:337636137060:route-table/rtb-07eec0b610306d657",
            "id": "rtb-07eec0b610306d657",
            "owner_id": "337636137060",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0d429a95419c467c3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private RT"
            },
            "tags_all": {
              "Name": "private RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-09bc102cc60d700ea"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.AWSB56-eip",
            "aws_nat_gateway.AWSB56-ngw",
            "aws_subnet.private-subnet1",
            "aws_vpc.AWSB56-VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:337636137060:route-table/rtb-059bb1ce3f39feb28",
            "id": "rtb-059bb1ce3f39feb28",
            "owner_id": "337636137060",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0637fd220f3bf9a8c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public RT"
            },
            "tags_all": {
              "Name": "public RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-09bc102cc60d700ea"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.AWSB56-igw",
            "aws_vpc.AWSB56-VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "AWSB56-private-rt-association1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-077fbf2f162d3081f",
            "route_table_id": "rtb-07eec0b610306d657",
            "subnet_id": "subnet-0ff0c6f2160398a8a"
          },
          "dependencies": [
            "aws_eip.AWSB56-eip",
            "aws_nat_gateway.AWSB56-ngw",
            "aws_route_table.private-rt",
            "aws_subnet.private-subnet1",
            "aws_vpc.AWSB56-VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "AWSB56-private-rt-association2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0af9b847d714a65ec",
            "route_table_id": "rtb-07eec0b610306d657",
            "subnet_id": "subnet-0816f6092b40af5d6"
          },
          "dependencies": [
            "aws_eip.AWSB56-eip",
            "aws_nat_gateway.AWSB56-ngw",
            "aws_route_table.private-rt",
            "aws_subnet.private-subnet1",
            "aws_subnet.private-subnet2",
            "aws_vpc.AWSB56-VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "AWSB56-private-rt-association3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04ecd9c748d0a684a",
            "route_table_id": "rtb-07eec0b610306d657",
            "subnet_id": "subnet-026cf2ae3f767a31c"
          },
          "dependencies": [
            "aws_eip.AWSB56-eip",
            "aws_nat_gateway.AWSB56-ngw",
            "aws_route_table.private-rt",
            "aws_subnet.private-subnet1",
            "aws_subnet.private-subnet3",
            "aws_vpc.AWSB56-VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "AWSB56-public-rt-association1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04f7db9e8ca8cddee",
            "route_table_id": "rtb-059bb1ce3f39feb28",
            "subnet_id": "subnet-0e9103f3b28d51fd6"
          },
          "dependencies": [
            "aws_internet_gateway.AWSB56-igw",
            "aws_route_table.public-rt",
            "aws_subnet.public-subnet1",
            "aws_vpc.AWSB56-VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "AWSB56-public-rt-association2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cffd6542f1845958",
            "route_table_id": "rtb-059bb1ce3f39feb28",
            "subnet_id": "subnet-0890ebc57bed3157c"
          },
          "dependencies": [
            "aws_internet_gateway.AWSB56-igw",
            "aws_route_table.public-rt",
            "aws_subnet.public-subnet2",
            "aws_vpc.AWSB56-VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "AWSB56-public-rt-association3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08ff40f91e3b5f1d1",
            "route_table_id": "rtb-059bb1ce3f39feb28",
            "subnet_id": "subnet-068aacd24f04bb3a6"
          },
          "dependencies": [
            "aws_internet_gateway.AWSB56-igw",
            "aws_route_table.public-rt",
            "aws_subnet.public-subnet3",
            "aws_vpc.AWSB56-VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "AWSB56_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:337636137060:security-group/sg-0c97b8fe2ed1a7c8f",
            "description": "AWSB56-sg",
            "egress": [],
            "id": "sg-0c97b8fe2ed1a7c8f",
            "ingress": [],
            "name": "AWSB56-sg",
            "name_prefix": "",
            "owner_id": "337636137060",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "AWSB56-sg"
            },
            "tags_all": {
              "Name": "AWSB56-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09bc102cc60d700ea"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.AWSB56-VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "AWSB56_sg_rule1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow inbound SSH access",
            "from_port": 22,
            "id": "sgrule-484743909",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c97b8fe2ed1a7c8f",
            "security_group_rule_id": "sgr-025f5e9df25e626e2",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.AWSB56_sg",
            "aws_vpc.AWSB56-VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "AWSB56_sg_rule2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow inbound HTTP access",
            "from_port": 80,
            "id": "sgrule-1435580590",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c97b8fe2ed1a7c8f",
            "security_group_rule_id": "sgr-053883780df013ea5",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.AWSB56_sg",
            "aws_vpc.AWSB56-VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "AWSB56_sg_rule3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow inbound HTTPs access",
            "from_port": 443,
            "id": "sgrule-1096474982",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c97b8fe2ed1a7c8f",
            "security_group_rule_id": "sgr-08c54a2edf9ca4f76",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.AWSB56_sg",
            "aws_vpc.AWSB56-VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "AWSB56_sg_rule4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow inbound RDP access",
            "from_port": 3389,
            "id": "sgrule-87817884",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c97b8fe2ed1a7c8f",
            "security_group_rule_id": "sgr-0788787889b8385f5",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 3389,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.AWSB56_sg",
            "aws_vpc.AWSB56-VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "AWSB56_sg_rule5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow inbounoutboubd all access",
            "from_port": 0,
            "id": "sgrule-1999005367",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0c97b8fe2ed1a7c8f",
            "security_group_rule_id": "sgr-08f3ea215e36303a1",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.AWSB56_sg",
            "aws_vpc.AWSB56-VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "AWSB56_sg_rule6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow inbound ICMP access",
            "from_port": -1,
            "id": "sgrule-467049335",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "icmp",
            "security_group_id": "sg-0c97b8fe2ed1a7c8f",
            "security_group_rule_id": "sgr-012249fe8fa30b734",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.AWSB56_sg",
            "aws_vpc.AWSB56-VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:337636137060:subnet/subnet-0ff0c6f2160398a8a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.56.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ff0c6f2160398a8a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "337636137060",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet1"
            },
            "tags_all": {
              "Name": "private-subnet1"
            },
            "vpc_id": "vpc-09bc102cc60d700ea"
          },
          "dependencies": [
            "aws_vpc.AWSB56-VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:337636137060:subnet/subnet-0816f6092b40af5d6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.56.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0816f6092b40af5d6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "337636137060",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet2"
            },
            "tags_all": {
              "Name": "private-subnet2"
            },
            "vpc_id": "vpc-09bc102cc60d700ea"
          },
          "dependencies": [
            "aws_vpc.AWSB56-VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:337636137060:subnet/subnet-026cf2ae3f767a31c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.56.30.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-026cf2ae3f767a31c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "337636137060",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet3"
            },
            "tags_all": {
              "Name": "private-subnet3"
            },
            "vpc_id": "vpc-09bc102cc60d700ea"
          },
          "dependencies": [
            "aws_vpc.AWSB56-VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:337636137060:subnet/subnet-0e9103f3b28d51fd6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.56.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e9103f3b28d51fd6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "337636137060",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet1"
            },
            "tags_all": {
              "Name": "public-subnet1"
            },
            "vpc_id": "vpc-09bc102cc60d700ea"
          },
          "dependencies": [
            "aws_vpc.AWSB56-VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:337636137060:subnet/subnet-0890ebc57bed3157c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.56.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0890ebc57bed3157c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "337636137060",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet2"
            },
            "tags_all": {
              "Name": "public-subnet2"
            },
            "vpc_id": "vpc-09bc102cc60d700ea"
          },
          "dependencies": [
            "aws_vpc.AWSB56-VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:337636137060:subnet/subnet-068aacd24f04bb3a6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.56.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-068aacd24f04bb3a6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "337636137060",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet3"
            },
            "tags_all": {
              "Name": "public-subnet3"
            },
            "vpc_id": "vpc-09bc102cc60d700ea"
          },
          "dependencies": [
            "aws_vpc.AWSB56-VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "AWSB56-VPC1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:337636137060:vpc/vpc-09bc102cc60d700ea",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.56.0.0/16",
            "default_network_acl_id": "acl-05f80465425c89b2c",
            "default_route_table_id": "rtb-08fe1b63caef5293f",
            "default_security_group_id": "sg-0fe82f51b92ada173",
            "dhcp_options_id": "dopt-4638863c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09bc102cc60d700ea",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08fe1b63caef5293f",
            "owner_id": "337636137060",
            "tags": {
              "Name": "AWSB56-VPC1"
            },
            "tags_all": {
              "Name": "AWSB56-VPC1"
            }
          }
        }
      ]
    }
  ]
}